<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_pop_selector"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_modify_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/modify_photo"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_capture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_pop_selector"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/capture"
                android:textColor="@android:color/black" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_pop_selector"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/cancel"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>