<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scale_value_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/back"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_info"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_25"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/ok"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_18" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_modify_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/connect_line" >
            </LinearLayout>

            <com.wearme.zfc.widget.RoundImageView
                android:id="@+id/iv_add_user"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:src="@drawable/add_user" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/ll_name"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_18" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/et_nick_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_juxing"
                            android:textSize="@dimen/text_15" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_age"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/birth"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_18" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/et_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_juxing"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_18" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_height"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_18" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/et_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_juxing"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_18" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_sex"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sex"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_18" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/et_sex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_juxing"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_18" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_weight"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_18" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/et_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_juxing"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_18" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_suggest_weight"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_suggest_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_blue"
                        android:textSize="@dimen/text_20" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_delete"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_delete"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_delete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete_user"
                            android:textColor="@color/color_blue"
                            android:textSize="@dimen/text_20" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>